fix overflow value

--- a/components/_cards.css.scss
+++ b/components/_cards.css.scss
@@ -2,7 +2,7 @@
 @import "../mixins/depth";
 
 @mixin card($background: $card-light-background, $level: $depth-level-default) {
-  overflow: none; // To reduce 'leakage' from children due to border-radius
+  overflow: hidden; // To reduce 'leakage' from children due to border-radius
   border-radius: $border-radius;
   background: $background;
   @include depth($level: $depth-level-default);
